--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flick_video_player: any
   get: 4.6.5
   file: ^6.1.4 
+  intl: ^0.18.0
+  time_machine: ^0.9.17
   flutter: 
     sdk: flutter
 
