--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,8 +26,15 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 apply plugin: 'com.google.gms.google-services'
 
+
+def keystoreProperties = new Properties()
+def keystorePropertiesFile = rootProject.file('key.properties')
+if (keystorePropertiesFile.exists()) {
+   keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+}
+
 android {
-    compileSdkVersion 32
+    compileSdkVersion 34
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -46,18 +53,28 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.bilermennesil.gameApp"
+        applicationId "com.northernerwolf.gameApp"
         minSdkVersion  21
-        targetSdkVersion 32
-        versionCode flutterVersionCode.toInteger()
+        targetSdkVersion 34
+        versionCode 3
         versionName flutterVersionName
         multiDexEnabled true
     }
 
+    signingConfigs {
+      release {
+         keyAlias keystoreProperties['keyAlias']
+         keyPassword keystoreProperties['keyPassword']
+         storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+         storePassword keystoreProperties['storePassword']
+      }
+   }
+
 
    buildTypes {
        release {
-           signingConfig signingConfigs.debug
+        //    signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
        }
     }
 }
