--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,17 +1,21 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.bilermennesil.gameApp">
+    package="com.northernerwolf.gameApp">
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="com.google.android.gms.permission.AD_ID"/>
 
    <application
         android:label="UC Daýy"
         android:name="${applicationName}"
         android:usesCleartextTraffic="true"
-        
+        android:allowBackup = "true"
+        android:fullBackupContent = "true"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:showWhenLocked="true"
+            android:allowBackup = "true"
+            android:fullBackupContent = "true"
             android:turnScreenOn="true"
             android:launchMode="singleTop"
             android:theme="@style/LaunchTheme"
