--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,7 +1,9 @@
 buildscript {
-    ext.kotlin_version = '1.6.10'
+    ext.kotlin_version = '1.9.10'
     repositories {
         google()
+          google()
+        mavenLocal()
         mavenCentral()
     }
 
