--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
-    "dart.lineLength": 300,
-    "editor.codeActionsOnSave": {
-        "source.fixAll": true
-    }
+  "dart.lineLength": 300,
+  "editor.codeActionsOnSave": {
+    "source.fixAll": "explicit"
+  }
 }
