--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -56,7 +56,7 @@ android {
         applicationId "com.northernerwolf.gameApp"
         minSdkVersion  21
         targetSdkVersion 34
-        versionCode 5
+        versionCode 6
         versionName flutterVersionName
         multiDexEnabled true
     }
@@ -88,4 +88,5 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:29.0.4')
     implementation 'com.google.firebase:firebase-messaging:21.1.0'
     implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.otaliastudios:transcoder:0.10.5'
 }
