--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,9 +1,7 @@
 buildscript {
-    ext.kotlin_version = '1.9.10'
+    ext.kotlin_version = '1.9.0'
     repositories {
         google()
-          google()
-        mavenLocal()
         mavenCentral()
     }
 
@@ -29,6 +27,6 @@ subprojects {
     project.evaluationDependsOn(':app')
 }
 
-task clean(type: Delete) {
+tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
