--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: game_app
-version: 1.0.2+6
+version: 1.0.3+7
 publish_to: none
 description: A new Flutter project.
 environment:
@@ -37,6 +37,7 @@ dependencies:
   provider: ^6.0.5
   dio: ^5.3.0
   flutter_launcher_icons: ^0.11.0
+  webview_flutter: ^2.0.4
 
   flutter:
     sdk: flutter
